Update CookCC url.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <a id="my-github-projects" class="anchor" href="#my-github-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My GitHub Projects</h3>
 
 <ul>
-<li><a href="http://github.com/coconut2015/cookcc">CookCC</a></li>
+<li><a href="http://coconut2015.github.io/cookcc/">CookCC</a></li>
 </ul>
 
 <h3>
